# nvd-claude-proxy

./: .env.example  .gitignore  ARCHITECTURAL_AUDIT.md  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  MANIFEST.in  Makefile  README.md  custom_models.yaml  docker-compose.yml  nvd_claude_proxy.db  pyproject.toml
.github/workflows/: ci-cd.yml
.hermes/plans/: 2026-04-25_193611-conversation-plan.md
.jules/: bolt.md
.planning/: ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-transformers/: 01-01-PLAN.md
.planning/phases/02-dashboard-session/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-05-PLAN.md
.playwright-mcp/: page-2026-04-24T02-32-49-807Z.yml  page-2026-04-24T02-33-11-353Z.yml
config/: models.yaml  server_tools.yaml
docs/: ANTHROPIC_COMPAT.md  DESIGN.md  REMEDIATION_BLUEPRINT.md
scripts/: launch_claude.sh
src/nvd_claude_proxy/: __init__.py  app.py  main.py
src/nvd_claude_proxy/cli/: main.py
src/nvd_claude_proxy/clients/: nvidia_client.py
src/nvd_claude_proxy/config/: models.py  server_tools.py  settings.py
src/nvd_claude_proxy/core/: events.py  processors.py
src/nvd_claude_proxy/data/: bash.json  code_execution.json  models.yaml  web_search.json
src/nvd_claude_proxy/db/: database.py  models.py
src/nvd_claude_proxy/errors/: mapper.py
src/nvd_claude_proxy/middleware/: body_limit.py  load_shedding.py  logging.py  rate_limiter.py  security.py  session_middleware.py
src/nvd_claude_proxy/routes/: count_tokens.py  dashboard.py  health.py  messages.py  metrics_route.py  models.py  openapi.py  stubs.py
src/nvd_claude_proxy/schemas/: anthropic.py  canonical.py  openai.py  validators.py
src/nvd_claude_proxy/services/: session_service.py
src/nvd_claude_proxy/static/: index.html
tests/: conftest.py
tests/e2e/: test_with_claude_code.md
tests/integration/: __init__.py  test_claude_code_compat.py
tests/unit/: test_anthropic_headers.py  test_count_tokens.py  test_errors.py  test_message_start_ttft.py  test_model_registry.py  test_nvidia_client_retry.py  test_p2_p3_features.py  test_rate_limiter.py  test_request_translator.py  test_response_translator.py  test_routes_anthropic_compat.py  test_schema_sanitizer.py  test_security_and_validation.py  test_stream_translator.py  test_think_tag_holdback.py  test_thinking_translator.py  test_tool_fuzzy_mapper.py  test_tool_translator.py  test_vision_translator.py
(+26 files in other folders)
